--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fluent_ui: ^4.7.5
+  adwaita: ^1.1.0
+  http: ^1.1.0
+  web_socket_channel: ^2.4.0
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
