--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   adwaita: ^1.1.0
   http: ^1.1.0
   web_socket_channel: ^2.4.0
   async: ^2.11.0
+  syncfusion_flutter_charts: ^23.1.43
+  collection: ^1.17.2
 
 dev_dependencies:
   flutter_test:
